welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:8: error: type mismatch;
 found   : Double
 required: Int
  rep = somme*1.0/(nums.length+1) 
                 ^